[package]
name = "p2pa"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "*"
features = ["rt", "time", "sync", "macros", "rt-multi-thread", "signal", "tracing", "io-util", "io-std", "net"] 

[dependencies.tokio-stream]
version = "*"

[dependencies.futures]
version = "*"

[dependencies.ractor]
version = "*"

[dependencies.libp2p]
version = "0.52.4"
features = ["full"]

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.anyhow]
version = "*"

[dependencies.thiserror]
version = "*"

[dependencies.dashmap]
version = "*"

[dependencies.bincode]
version = "*"

[dependencies.rand]
version = "0.8.3"

[dependencies.void]
version = "1.0.2"

[dependencies.either]
version = "*"

[dependencies.log]
version = "*"

[dependencies.derive_builder]
version = "*"

[dependencies.trust-dns-proto]
version = "0.23.2"
features = ["dnssec", "mdns", "tokio-runtime"]

[dependencies.if-watch]
version = "3.0.1"
features = ["tokio"]

[dependencies.smallvec]
version = "1.6.1"

[dependencies.socket2]
version = "0.5.3"
features = ["all"]

# Develop dependencies

[dev-dependencies.env_logger]
version = "*"

[dev-dependencies.clap]
version = "*"
features = ["derive"]

[dev-dependencies.base64]
version = "*"